# py-toga

./: .gitignore  README.md  pyproject.toml
src/box/: main.py
src/button/: main.py
src/confirm-dialog/: main.py
src/error-dialog/: main.py
src/info-dialog/: main.py
src/main-window/: main.py
src/open-file-dialog/: main.py
src/option-container/: main.py
src/question-dialog/: main.py
src/save-file-dialog/: main.py
src/scroll-container/: main.py
src/select-folder-dialog/: main.py
src/split-container/: main.py
src/stack-trace-dialog/: main.py
src/window/: main.py
